# EdgeSAM-MNN

./: README.md  onnx_infer.py
mnn_cpp/: CMakeLists.txt  sam_demo.cpp
mnn_python/: segment_anything_example.py
